--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,20 +21,17 @@ a {
 }
 
 .content-box {
-    position: absolute;
-    left: 250px;
-    right: 0;
-    top: 70px;
-    bottom: 0;
-    overflow-y: scroll;
-    -webkit-transition: left 0.3s ease-in-out;
-    transition: left 0.3s ease-in-out;
-    background: #f0f0f0;
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px;
+    background: rgba(233, 0, 0, 0.5);
 }
 
 .content {
-    width: auto;
-    padding: 30px;
+    width: 1800px;
+    height: 750px;
+    margin: 20px 40px;
+    background: rgba(111, 106, 116, 0.8);
 }
 
 .content-collapse {
