--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@ a {
     width: 100%;
     height: 100%;
     padding: 20px 20px;
-    background: rgba(233, 0, 0, 0.5);
+    /* background: rgba(233, 0, 0, 0.5); */
 }
 
 .content {
