--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,17 +21,23 @@ a {
 }
 
 .content-box {
-    width: 100%;
-    height: 100%;
-    padding: 20px 20px;
-    /* background: rgba(233, 0, 0, 0.5); */
-}
-
-.content {
     width: 1800px;
     height: 750px;
     margin: 20px 40px;
+    position: absolute;
+    overflow: hidden;
+    /* background: rgba(233, 106, 116, 0.8); */
+}
+
+.content {
+    width: 100%;
+    height: 100%;
     background: rgba(111, 106, 116, 0.8);
+    transform: translateY(100%);
+    transition: transform ease 0.5s;
+}
+.conactive {
+    transform: translateY(0);
 }
 
 .content-collapse {
