--- a/static/css/main.less
+++ b/static/css/main.less
@@ -13,6 +13,7 @@ body,
 }
 
 body {
+    box-sizing: border-box;
     font-family: 'PingFang SC', 'Helvetica Neue', Helvetica, 'microsoft yahei', arial, STHeiTi, sans-serif;
 }
 
@@ -23,32 +24,51 @@ a {
 .content-box {
     width: 1800px;
     height: 750px;
-    margin: 20px 40px;
+    margin: 30px 40px;
     position: absolute;
+    background: rgba(111, 106, 116, 0.8);
     overflow: hidden;
-    /* background: rgba(233, 106, 116, 0.8); */
 }
 
 .content {
     width: 100%;
     height: 100%;
-    background: rgba(111, 106, 116, 0.8);
-    transform: translateY(100%);
-    transition: transform ease 0.5s;
+    padding-top: 50px;
+    transition: transform 0.5s ease;
+    &.active {
+        transform: translateY(-100%);
+    }
 }
-.conactive {
-    transform: translateY(0);
+
+.container {
+    height: 100%;
+    position: absolute;
+}
+
+.subcontainer {
+    height: 100%;
+    position: absolute;
+    top: 100%;
+}
+
+// 标题
+.jrtitle {
+    height: 22px;
+    line-height: 22px;
+    padding: 10px 20px;
+    .snav {
+        height: 100%;
+        color: rgba(255, 255, 255, 1);
+        img {
+            display: inline-block;
+            width: 25px;
+            height: 25px;
+        }
+    }
 }
 
 .content-collapse {
     left: 65px;
-}
-
-.container {
-    padding: 30px 30px 20px 30px;
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
 }
 
 .crumbs {
