--- a/static/css/main.less
+++ b/static/css/main.less
@@ -67,6 +67,24 @@ a {
     }
 }
 
+//按钮
+.btn {
+    height: 40px;
+    width: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+    border: solid 2px #828298;
+    color: #828298;
+    font-size: 16px;
+    &.btnactive {
+        font-size: 16px;
+        color: #080532;
+        background-color: #828298;
+    }
+}
+
 .content-collapse {
     left: 65px;
 }
