--- a/static/css/main.less
+++ b/static/css/main.less
@@ -8,8 +8,9 @@ body,
 #app,
 .wrapper {
     width: 100%;
+    min-width: 1230px;
     height: 100%;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 body {
@@ -21,19 +22,27 @@ a {
     text-decoration: none;
 }
 
+ul,
+li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 .content-box {
-    width: 1800px;
-    height: 750px;
-    margin: 30px 40px;
-    position: absolute;
-    background: rgba(111, 106, 116, 0.8);
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 40px 10px 40px;
+    height: calc(100% - 150px);
+    position: relative;
+    // background: rgba(111, 106, 116, 0.8);
     overflow: hidden;
 }
 
 .content {
     width: 100%;
     height: 100%;
-    padding-top: 50px;
+    padding-top: 60px;
     transition: transform 0.5s ease;
     &.active {
         transform: translateY(-100%);
@@ -42,6 +51,7 @@ a {
 
 .container {
     height: 100%;
+    width: 100%;
     position: absolute;
 }
 
@@ -67,10 +77,19 @@ a {
     }
 }
 
+//按钮组
+.btngroup {
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+}
 //按钮
 .btn {
     height: 40px;
     width: 120px;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,6 +102,18 @@ a {
         color: #080532;
         background-color: #828298;
     }
+}
+.applybtn {
+    height: 40px;
+    width: 120px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    border: solid 2px #828298;
+    color: #828298;
+    font-size: 16px;
 }
 
 .content-collapse {
