--- a/static/css/main.less
+++ b/static/css/main.less
@@ -3,6 +3,13 @@
     padding: 0;
 }
 
+.el-slider__bar {
+    background-color: #febe00;
+}
+.el-slider__button {
+    border: 2px solid #febe00;
+}
+
 html,
 body,
 #app,
@@ -38,36 +45,68 @@ li {
     overflow: hidden;
 }
 
-.content {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.5s ease;
-    &.active {
-        transform: translateY(-100%);
-    }
-}
-
 .container {
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: relative;
+    padding-top: 70px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
+.content {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    box-sizing: border-box;
+    &::-webkit-scrollbar {
+        width: 6px; /*高宽分别对应横竖滚动条的尺寸*/
+        height: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        -webkit-box-shadow: inset 0 0 5px rgba(31, 42, 81, 1);
+        background: rgba(31, 42, 81, 1);
+    }
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 5px rgba(31, 42, 81, 1);
+        border-radius: 0;
+        background: rgba(31, 42, 81, 0.5);
+    }
+}
 .subcontainer {
     height: 100%;
-    position: absolute;
-    top: 100%;
+    box-sizing: border-box;
+    transition: transform 0.5s ease;
+    width: 100%;
+    overflow: auto;
+    &.active {
+        transform: translateY(-100%);
+    }
+    &::-webkit-scrollbar {
+        width: 6px; /*高宽分别对应横竖滚动条的尺寸*/
+        height: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 6px;
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
+        background: rgba(31, 42, 81, 1);
+    }
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 5px rgba(31, 42, 81, 1);
+        border-radius: 0;
+        background: rgba(1, 1, 1, 0.5);
+    }
 }
 
 // 标题
 .jrtitle {
     height: 50px;
     line-height: 50px;
-    width: 100%;
     padding-left: 40px;
     margin-bottom: 20px;
+    display: flex;
     img {
-        display: inline-block;
         width: 50px;
         height: 50px;
         vertical-align: middle;
