--- a/static/css/main.less
+++ b/static/css/main.less
@@ -147,6 +147,7 @@ li {
     border: solid 2px #828298;
     color: #828298;
     font-size: 16px;
+    cursor: pointer;
     &.btnactive {
         font-size: 16px;
         color: #080532;
@@ -154,6 +155,7 @@ li {
     }
 }
 .applybtn {
+    cursor: pointer;
     height: 50px;
     width: 180px;
     box-sizing: border-box;
