--- a/src/style/global.less
+++ b/src/style/global.less
@@ -1,41 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.el-slider__bar {
-    background-color: #febe00;
-}
-.el-slider__button {
-    border: 2px solid #febe00;
-}
-
-html,
-body,
-#app,
-.wrapper {
-    width: 100%;
-    min-width: 1230px;
-    height: 100%;
-    overflow-x: auto;
-}
-
-body {
-    box-sizing: border-box;
-    font-family: 'PingFang SC', 'Helvetica Neue', Helvetica, 'microsoft yahei', arial, STHeiTi, sans-serif;
-}
-
-a {
-    text-decoration: none;
-}
-
-ul,
-li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
 .content-box {
     box-sizing: border-box;
     width: 100%;
@@ -131,6 +93,69 @@ li {
     }
 }
 
+// tab
+.tabs {
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 11;
+    position: absolute;
+    left: 40px;
+    right: 40px;
+    background-color: #02022b;
+    .tab {
+        cursor: pointer;
+        width: 24.8%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        color: rgba(255, 255, 255, 1);
+        background-color: #1f2a51;
+        > b {
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
+        &:last-child {
+            margin-right: 0;
+        }
+        &.active {
+            border: none;
+            color: #0c0831;
+            background-color: #febe00;
+        }
+    }
+}
+
+.tabcontent4 {
+    transition: transform 0.5s ease;
+    &.active {
+        transform: translateY(-100%);
+    }
+}
+.tabgroup {
+    display: flex;
+    justify-content: space-between;
+    .tabtitle {
+        padding: 20px 30px;
+        color: white;
+    }
+}
+
+.showdata {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 30px 0 30px 0;
+    background: url('~assets/icon/img_line.png') repeat-x bottom;
+}
+
+.setdata {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 30px 0 30px 0;
+}
+
 //按钮组
 .btngroup {
     width: 100%;
@@ -185,134 +210,16 @@ li {
     }
 }
 
+.btnapply {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
 .btncenter {
     display: flex;
     justify-content: center;
     &.mosaicbtn {
         margin-top: 20px;
     }
-}
-
-.content-collapse {
-    left: 65px;
-}
-
-.crumbs {
-    margin-bottom: 20px;
-}
-
-.pagination {
-    margin: 20px 0;
-    text-align: right;
-}
-
-.plugins-tips {
-    padding: 20px 10px;
-    margin-bottom: 20px;
-}
-
-.el-button + .el-tooltip {
-    margin-left: 10px;
-}
-
-.el-table tr:hover {
-    background: #f6faff;
-}
-
-.mgb20 {
-    margin-bottom: 20px;
-}
-
-.move-enter-active,
-.move-leave-active {
-    transition: opacity 0.5s;
-}
-
-.move-enter,
-.move-leave {
-    opacity: 0;
-}
-
-/*BaseForm*/
-
-.form-box {
-    width: 600px;
-}
-
-.form-box .line {
-    text-align: center;
-}
-
-.el-time-panel__content::after,
-.el-time-panel__content::before {
-    margin-top: -7px;
-}
-
-.el-time-spinner__wrapper .el-scrollbar__wrap:not(.el-scrollbar__wrap--hidden-default) {
-    padding-bottom: 0;
-}
-
-/*Upload*/
-
-.pure-button {
-    width: 150px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    color: #fff;
-    border-radius: 3px;
-}
-
-.g-core-image-corp-container .info-aside {
-    height: 45px;
-}
-
-.el-upload--text {
-    background-color: #fff;
-    border: 1px dashed #d9d9d9;
-    border-radius: 6px;
-    box-sizing: border-box;
-    width: 360px;
-    height: 180px;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-}
-
-.el-upload--text .el-icon-upload {
-    font-size: 67px;
-    color: #97a8be;
-    margin: 40px 0 16px;
-    line-height: 50px;
-}
-
-.el-upload--text {
-    color: #97a8be;
-    font-size: 14px;
-    text-align: center;
-}
-
-.el-upload--text em {
-    font-style: normal;
-}
-
-/*VueEditor*/
-
-.ql-container {
-    min-height: 400px;
-}
-
-.ql-snow .ql-tooltip {
-    transform: translateX(117.5px) translateY(10px) !important;
-}
-
-.editor-btn {
-    margin-top: 20px;
-}
-
-/*markdown*/
-
-.v-note-wrapper .v-note-panel {
-    min-height: 500px;
 }
