--- a/src/style/global.less
+++ b/src/style/global.less
@@ -79,7 +79,6 @@
         }
         &.iicon {
             margin-right: 10px;
-            cursor: pointer;
             user-select: none;
         }
     }
@@ -107,6 +106,9 @@
     .tab {
         cursor: pointer;
         width: 24.8%;
+        &.tab3 {
+            width: 33.1%;
+        }
         height: 100%;
         display: flex;
         align-items: center;
@@ -139,7 +141,7 @@
     justify-content: space-between;
     .tabtitle {
         padding: 20px 30px;
-        color: white;
+        color: #adb4cf;
     }
 }
 
