--- a/src/style/global.less
+++ b/src/style/global.less
@@ -162,6 +162,15 @@
     background: url('~assets/icon/img_line.png') repeat-x bottom;
 }
 
+.showdatano {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 0 30px 0;
+    &.showdatahr {
+        background: url('~assets/icon/img_line.png') repeat-x bottom;
+    }
+}
+
 .setdata {
     box-sizing: border-box;
     width: 100%;
