--- a/src/style/element-ui.less
+++ b/src/style/element-ui.less
@@ -6,6 +6,19 @@
     left: 8px;
 }
 
+.el-slider__bar {
+    background-color: #febe00;
+}
+.el-slider__button {
+    border: 2px solid #febe00;
+}
+
+// progress
+.el-progress__text {
+    font-size: 22px !important;
+    color: #fff;
+}
+
 // slider
 .silder-input {
 }
