--- a/src/style/global.less
+++ b/src/style/global.less
@@ -148,6 +148,7 @@
 }
 .tabgroup {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     .tabtitle {
         padding: 20px 30px;
@@ -158,14 +159,14 @@
 .showdata {
     box-sizing: border-box;
     width: 100%;
-    padding: 30px 0 30px 0;
+    padding: 0 0 30px 0;
     background: url('~assets/icon/img_line.png') repeat-x bottom;
 }
 
 .showdatano {
     box-sizing: border-box;
     width: 100%;
-    padding: 10px 0 30px 0;
+    padding: 0 0 30px 0;
     &.showdatahr {
         background: url('~assets/icon/img_line.png') repeat-x bottom;
     }
@@ -243,4 +244,11 @@
     &.mosaicbtn {
         margin-top: 20px;
     }
+}
+
+.pt30 {
+    padding-top: 30px;
+}
+.pt10 {
+    padding-top: 10px;
 }
