--- a/src/style/element-ui.less
+++ b/src/style/element-ui.less
@@ -1,5 +1,9 @@
 // 覆盖element-ui全局样式
 
+.align-center {
+    top: 50%;
+}
+
 .el-slider__button-wrapper .el-tooltip {
     position: absolute;
     top: 8px;
