--- a/src/style/global.less
+++ b/src/style/global.less
@@ -21,10 +21,10 @@
 }
 
 .content {
-    width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: scroll;
     box-sizing: border-box;
+    margin-right: -6px;
     &::-webkit-scrollbar {
         width: 6px; /*高宽分别对应横竖滚动条的尺寸*/
         height: 4px;
@@ -35,9 +35,9 @@
         background: rgba(31, 42, 81, 1);
     }
     &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 5px rgba(31, 42, 81, 1);
+        -webkit-box-shadow: inset 0 0 5px transparent;
         border-radius: 0;
-        background: rgba(31, 42, 81, 0.5);
+        background: transparent;
     }
 }
 .subcontainer {
@@ -124,10 +124,11 @@
         align-items: center;
         color: rgba(255, 255, 255, 1);
         background-color: #1f2a51;
-        > b {
+        > span {
             display: block;
             width: 100%;
             text-align: center;
+            font-size: 24px;
         }
         &:last-child {
             margin-right: 0;
