--- a/src/style/element-ui.less
+++ b/src/style/element-ui.less
@@ -1,4 +1,14 @@
 // 覆盖element-ui全局样式
+
+.el-progress-bar {
+    padding-right: 58px;
+    width: 80%;
+}
+
+.el-progress-bar__outer {
+    background-color: #525972;
+}
+
 .el-loading-mask {
     background-color: rgba(255, 255, 255, 0.3);
 }
@@ -22,7 +32,7 @@
 
 // progress
 .el-progress__text {
-    font-size: 22px !important;
+    font-size: 24px !important;
     color: #fff;
 }
 
