--- a/src/style/global.less
+++ b/src/style/global.less
@@ -113,7 +113,6 @@
     position: absolute;
     left: 40px;
     right: 40px;
-    background-color: #02022b;
     .tab {
         cursor: pointer;
         width: 24.8%;
@@ -253,4 +252,37 @@
 }
 .pt10 {
     padding-top: 10px;
+}
+
+// z遮罩层
+.alertmask {
+    position: fixed;
+    // background-color: #1f2a51;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    filter: blur(5px);
+}
+.alertwindow {
+    box-sizing: border-box;
+    width: 270px;
+    height: 180px;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 21;
+    .border {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #adb4cf;
+        color: #fff;
+    }
 }
