--- a/src/style/element-ui.less
+++ b/src/style/element-ui.less
@@ -1,5 +1,19 @@
 // 覆盖element-ui全局样式
 
+.el-card,
+.el-message {
+    border-radius: 0px;
+}
+.el-message--info .el-message__content {
+    color: #061031;
+}
+.el-message .el-icon-info {
+    color: #061031;
+}
+.el-message {
+    top: 75px;
+}
+
 .el-progress-bar {
     padding-right: 58px;
     width: 80%;
