--- a/src/style/element-ui.less
+++ b/src/style/element-ui.less
@@ -11,6 +11,8 @@
     color: #061031;
 }
 .el-message {
+    border: none;
+    background-color: #b4b7c1;
     top: 75px;
 }
 
@@ -20,7 +22,7 @@
 }
 
 .el-progress-bar__outer {
-    background-color: #525972;
+    background-color: #606a89;
 }
 
 .el-loading-mask {
@@ -68,7 +70,7 @@
     height: 34px;
 }
 .el-input.is-disabled .el-input__inner {
-    background-color: #1f2a51;
+    background-color: #2e3c67;
     border: none;
     color: #c0c4cc;
     cursor: not-allowed;
@@ -76,12 +78,12 @@
 
 .el-input__inner {
     order: 0;
-    background-color: #1f2a51;
-    border: 1px solid #525972;
+    background-color: #2e3c67;
+    border: 1px solid #606a89;
     border: none;
     color: #fff;
     padding: 0;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .el-input-number--small .el-input-number__decrease,
@@ -90,8 +92,8 @@
     height: 32px;
     font-size: 15px;
     position: relative;
-    background-color: #1f2a51;
-    border: 1px solid #525972;
+    background-color: #2e3c67;
+    border: 1px solid #606a89;
     top: 0;
     border-radius: 0px;
     span {
@@ -103,7 +105,7 @@
 }
 .el-input-number.is-disabled .el-input-number__decrease,
 .el-input-number.is-disabled .el-input-number__increase {
-    border-color: #525972;
+    border-color: #606a89;
     color: #e4e7ed;
 }
 
