--- a/src/style/global.less
+++ b/src/style/global.less
@@ -16,7 +16,7 @@
     height: 100%;
     width: 100%;
     position: relative;
-    padding-top: 70px;
+    padding-top: 60px;
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -105,7 +105,7 @@
 
 // tab
 .tabs {
-    height: 60px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -119,11 +119,14 @@
         &.tab3 {
             width: 33.1%;
         }
+        &:hover {
+            background-color: #5b678e;
+        }
         height: 100%;
         display: flex;
         align-items: center;
         color: rgba(255, 255, 255, 1);
-        background-color: #1f2a51;
+        background-color: #2e3c67;
         > span {
             display: block;
             width: 100%;
@@ -189,21 +192,25 @@
 }
 //按钮
 .btn {
-    height: 40px;
-    width: 120px;
+    height: 50px;
+    width: 180px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
     float: left;
-    border: solid 2px #828298;
+    border-bottom: solid 1px #828298;
     color: #828298;
-    font-size: 16px;
+    font-size: 20px;
     cursor: pointer;
+    &:hover {
+        color: #fff;
+        border-bottom: solid 1px #fff;
+    }
     &.btnactive {
-        font-size: 16px;
-        color: #080532;
-        background-color: #828298;
+        font-size: 20px;
+        color: #febe00;
+        border-bottom: solid 3px #febe00;
     }
 }
 .applybtn {
